--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": false,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/globals.css",
+    "css": "src/styles/globals.css",
     "baseColor": "gray",
     "cssVariables": true
   },
