--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.252.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
+    "next-axiom": "^0.18.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
